--- a/smart-test-generation/genezio.yaml
+++ b/smart-test-generation/genezio.yaml
@@ -10,7 +10,7 @@ backend:
   path: server
   # Information about the backend's programming language.
   language:
-    # The name of the programming language.
+    # The name of tgithe programming language.
     name: js
     # The package manager used by the backend.
     packageManager: npm
@@ -22,6 +22,10 @@ backend:
     local: npm install
   # The cloud provider where the backend is deployed.
   cloudProvider: genezio
+  
+  ### DEFINE BACLEND CLASSESE
+  classes:
+      - path: downloader.js
 # Information about the frontend, including the path, language, and publish directory.
 # It is optional. It can also be an array if there are multiple frontends you want to deploy.
 frontend:
